# streamlit_github_desktop

stream_gihub_desk/: pyproject.toml
stream_gihub_desk/src/stream_gihub_desk/: __init__.py  main.py
